<resources>
    <string name="app_name">SoundingCalculator</string>
    <string name="data_lapangan">Data Lapangan</string>
    <string name="data_sounding">Data Sounding %s</string>
    <string name="data_umum">Data Umum</string>
    <string name="data_dokumen">Data BA-PFP (Sounding)</string>
    <string name="data_dokumen_sampling">Data BA-PBC (Sampling)</string>
    <string name="lapor_hasil">Pelaporan Hasil</string>
    <string name="hasil_perhitungan">Hasil Perhitungan (MT)</string>
    <string name="hasil_pembulatan">Hasil Pembulatan (MT)</string>
    <string name="hint_hasil_pembulatan">Cth: 8000</string>
    <string name="tinggi_cairan">Tinggi Cairan (mm)</string>
    <string name="tinggi_cairan1">Tinggi Cairan Simplo (mm)</string>
    <string name="tinggi_cairan2">Tinggi Cairan Duplo (mm)</string>
    <string name="tinggi_cairan3">Tinggi Cairan Triplo (mm)</string>
    <string name="hint_tinggi_cairan">Cth: 12000</string>
    <string name="awal">Awal</string>
    <string name="petugas">Petugas Sampling 2 (Tidak Wajib)</string>
    <string name="saksi">Saksi Sampling 2 (Tidak Wajib)</string>
    <string name="awal_edited">Awal %s</string>
    <string name="akhir">Akhir</string>
    <string name="hint_sounding">Masukkan Sounding</string>
    <string name="akhir_edited">Akhir %s</string>
    <string name="sarana_pengangkut">Nama Sarkut</string>
    <string name="no_ba">Nomor BA</string>
    <string name="no_ba_holder">%s…%s</string>
    <string name="jumlah_barcon">Jumlah Contoh</string>
    <string name="hint_jumlah_barcon">Cth: 1 botol</string>
    <string name="text_jumlah_barcon">1 botol</string>
    <string name="hint_sarana_pengangkut">Cth: MT. MESON V01/11</string>
    <string name="hint_no_ba">BAPFP-XX/KBC.150504/2022</string>
    <string name="no_ba_edited">BAPFP-XX/KBC.150504/%s</string>
    <string name="suhu_cairan">Suhu Cairan (°C)</string>
    <string name="suhu_cairan1">Suhu Cairan Atas (°C)</string>
    <string name="suhu_cairan2">Suhu Cairan Tengah (°C)</string>
    <string name="suhu_cairan3">Suhu Cairan Bawah (°C)</string>
    <string name="hint_suhu_cairan">Cth: 50</string>
    <string name="suhu_edited">%s °C</string>
    <string name="tinggi_meja">Tinggi Meja (mm)</string>
    <string name="hint_tinggi_meja">Cth: 200</string>
    <string name="tabel_kalibrasi">Tabel Kalibrasi (L)</string>
    <string name="hint_vol_kalibrasi">Cth: 3595150</string>
    <string name="tabel_fraksi">Tabel Fraksi (L)</string>
    <string name="hint_vol_fraksi">Cth: 877.8</string>
    <string name="density_cairan">Density Cairan (MT/KL)</string>
    <string name="hint_density_cairan">Cth: 0.9046</string>
    <string name="suhu_tetap">Suhu Kalibrasi Tangki (°C)</string>
    <string name="hint_suhu_tetap">Cth: 40</string>
    <string name="suhu_tangki">40</string>
    <string name="data_tangki">Data Tangki</string>
    <string name="data_tabel">Data Tabel</string>
    <string name="faktor_muai">Koefisien/Faktor Muai Tangki</string>
    <string name="hint_faktor_muai">Cth: 0.0000348</string>
    <string name="simpan_data">SIMPAN DATA</string>
    <string name="tambah_sounding">TAMBAH INPUT SOUNDING</string>
    <string name="i">%s</string>
    <string name="hasil">Hasil: 0.000 MT</string>
    <string name="hasil_kgm">Hasil: 0.000 KGM</string>
    <string name="hasil_final">Hasil Akhir: 0.000 MT</string>
    <string name="hasil_final_edited">Hasil Akhir: %s MT</string>
    <string name="hasil_final_edited_kgm">Hasil Akhir: %s KGM</string>
    <string name="kota">Kotabaru</string>
    <string name="tinggi_terkoreksi">Tinggi Terkoreksi: 0.000 m</string>
    <string name="volume_app">Volume App: 0.000 L</string>
    <string name="volume_obs">Volume Obs: 0.000 L</string>
    <string name="volume">Volume: 0.000 KL</string>
    <string name="detail_arrow">Detail</string>
    <string name="tinggi_terkoreksi_edited">Tinggi Terkoreksi: %s m</string>
    <string name="volume_app_edited">Volume App: %s L</string>
    <string name="volume_obs_edited">Volume Obs: %s L</string>
    <string name="volume_edited">Volume: %s KL</string>
    <string name="tabel_kalibrasi1">Tabel Kalibrasi 1 (L)</string>
    <string name="vol_kalibrasi1">Cth: 3595150</string>
    <string name="vol_kalibrasi">Cth: 3595150</string>
    <string name="vol_fraksi">Volume Fraksi (L)</string>
    <string name="tabel_kalibrasi2">Tabel Kalibrasi 2 (L)</string>
    <string name="hint_vol_kalibrasi2">Cth: 3598084</string>
    <string name="vol_kalibrasi2">Cth: 3598084</string>
    <string name="fraksi">Fraksi</string>
    <string name="interpolasi">Interpolasi</string>
    <string name="data_administrasi">Data Administrasi</string>
    <string name="pegawai">Pegawai</string>
    <string name="pengguna_jasa">Pengguna Jasa</string>
    <string name="jabatan">Jabatan</string>
    <string name="jabatan_login">Jabatan (Cth: PBC Muda/Ahli Muda)</string>
    <string name="hint_jabatan">Cth: Direktur Utama</string>
    <string name="hint_jabatan_pegawai">Cth: PBC Muda/Ahli Muda</string>
    <string name="hint_pengguna_jasa">Cth: Bagus Suhardja</string>
    <string name="data_tabel_edited">Data Tabel (%s m)</string>
    <string name="tabel_kalibrasi_edited">Tabel Kalibrasi (%s0 m)</string>
    <string name="tabel_kalibrasi_edited1">Tabel Kalibrasi (%s00 m)</string>
    <string name="tabel_kalibrasi_edited2">Tabel Kalibrasi ($s000 m)</string>
    <string name="tabel_kalibrasi_edited3">Tabel Kalibrasi ($s.000 m)</string>
    <string name="tabel_kalibrasi2_edited">"Tabel Kalibrasi ($s0 m)</string>
    <string name="tabel_fraksi_edited">Tabel Fraksi (%s mm)</string>
    <string name="hasil_akhir_edited">%s MT</string>
    <string name="hasil_akhir_edited_kgm">%s KGM</string>
    <string name="deskripsi">%s\n%s</string>
    <string name="before_edited">__.___.___._-___.___</string>
    <string name="number_15">%s.%s.%s.%s-%s.%s</string>
    <string name="number_12">%s.%s.%s.%s-%s.%s%s</string>
    <string name="number_9">%s.%s.%s.%s-%s%s</string>
    <string name="number_9_exact">%s.%s.%s.%s%s</string>
    <string name="number_5">%s.%s.%s%s</string>
    <string name="number_2">%s.%s%s</string>
    <string name="number_0">%s%s</string>
    <string name="nol">0</string>
    <string name="second_edited">%s.%s.___._-___.___</string>
    <string name="bea_cukai">BEA CUKAI</string>
    <string name="makin_baik">MAKIN BAIK</string>
    <string name="company">Perusahaan</string>
    <string name="kantor">Kantor</string>
    <string name="sounding_system">Sounding System</string>
    <string name="smarts">SMARTS</string>
    <string name="nama_nip">Masukkan Data Diri Anda</string>
    <string name="smarts_panjang">Sounding Mobile Apps Report &amp; Sampling</string>
    <string name="golongan">Golongan</string>
    <string name="nama">Nama</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="nip">NIP</string>
    <string name="masuk">SIMPAN USER</string>
    <string name="tab">Tab</string>
    <string name="top_border">Top Border Image</string>
    <string name="copyright">© 2022</string>
    <string name="kotabaru">© 2022 KPPBC TMP C Kotabaru</string>
    <string name="surabaya">© 2022 BLBC Kelas II Surabaya</string>
    <string name="pantoloan">© 2022 KPPBC TMP C Pantoloan</string>
    <string name="image">Image</string>
    <string name="hint_nip">Cth: 1990101020100110001</string>
    <string name="tambah_data">TAMBAHKAN DATA</string>
    <string name="no_record">Tidak Ada Data Tersedia</string>
    <string name="no_raw_record">Tidak Ada Data Tersedia\nTambahkan Data melalui Tab Calculator</string>
    <string name="no_final_record">Tidak Ada Data Tersedia\nTambahkan Data melalui\nTombol Tambah pada Kanan Bawah</string>
    <string name="hint_nama">Cth: Adam Malik</string>
    <string name="hint_npwp">Masukkan NPWP Perusahaan</string>
    <string name="hint_perusahaan">Cth: PT. Maju Jaya</string>
    <string name="perusahaan">Perusahaan</string>
    <string name="waktu">Waktu Sounding</string>
    <string name="tanggal_ba">Tanggal BA</string>
    <string name="waktu_barcon">Waktu Aju Contoh</string>
    <string name="hint_waktu_barcon">Waktu Aju Contoh</string>
    <string name="hint_tanggal_ba">Tanggal Penerbitan BA</string>
    <string name="hint_waktu">Masukkan Waktu Sounding</string>
    <string name="format_waktu">%s %02d:%02d %s</string>
    <string name="no_dokumen">Nomor Form 3D</string>
    <string name="hint_no_dokumen">Cth: DP1002002022020301244316</string>
    <string name="no_dokumen_edited">DP100200%s</string>
    <string name="hint_alamat">Cth: Jl. A No. 1, Surabaya</string>
    <string name="update_record">Update Data</string>
    <string name="update">Update</string>
    <string name="npwp">NPWP</string>
    <string name="alamat">Alamat</string>
    <string name="raw_data">Raw Data</string>
    <string name="final_report">Final Report</string>
    <string name="add_final_report">Tambah Final Report</string>
    <string name="cancel">Cancel</string>
    <string name="produk">Produk/Jenis Barang</string>
    <string name="hint_produk">Cth: RBD Palm Olein</string>
    <string name="bentuk">Bentuk Fisik/Warna/Bau</string>
    <string name="hint_bentuk">Cth: Cairan kuning bening</string>
    <string name="no_tangki">Nomor Tangki</string>
    <string name="hint_no_tangki">Cth: R17-A</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="lokasi_edited">Tangki Timbun KB %s</string>
    <string name="nama_pegawai">Petugas Sounding</string>
    <string name="hint_nama_pegawai">Nama Petugas Sounding</string>
    <string name="hint_kantor_pegawai">Kantor Pegawai</string>
    <string name="hint_nama_pengguna_jasa">Nama Petugas Pengguna Jasa</string>
    <string name="lokasi_sounding">Lokasi Sounding</string>
    <string name="lokasi_ba">Lokasi BA</string>
    <string name="hint_lokasi_ba">Cth: %s</string>
    <string name="hint_lokasi_sounding">Cth: Tangki Darat PT. A</string>
    <string name="no_tangki_edited">No Tangki: %s</string>
    <string name="waktu_edited">Pukul %s</string>
    <string name="delete">Delete</string>
    <string name="judul_hapus">Hapus Data</string>
    <string name="hint_hapus_sounding">Apakah Anda yakin akan menghapus data sounding Tangki: %s %s pada %s?</string>
    <string name="exporter">Pengguna Jasa</string>
    <string name="user">Petugas BC</string>
    <string name="user_office">Kantor BC</string>
    <string name="tv_kota">Kota</string>
    <string name="hint_kota">Cth: Pantoloan</string>
    <string name="tv_kantor">Nama Kantor</string>
    <string name="hint_kantor">Cth: KPPBC TMP C Pantoloan</string>
    <string name="tv_kanwil">Nama Kanwil</string>
    <string name="hint_kanwil">Cth: Kanwil DJBC Sulawesi Bagian Utara</string>
    <string name="hint_lokasi">Cth: Pasangkayu</string>
    <string name="tv_format_ba">Format BA Sounding (Tanpa Tahun)</string>
    <string name="hint_format_ba">Cth: BA-PFP-111/KBC.180104/2022</string>
    <string name="hint_format_ba_tanpa_tahun">Cth: BA-PFP-111/KBC.180104/</string>
    <string name="tv_format_3d">Format Form 3D (Tanpa Tahun)</string>
    <string name="form_3d">Nomor Form 3D</string>
    <string name="hint_format_3d">Cth: DP110800</string>
    <string name="tv_format_ba_sampling">Format BA Sampling (Tanpa Tahun)</string>
    <string name="hint_format_ba_sampling">Cth: BA-PCB-111/KBC.180104/2022</string>
    <string name="hint_format_ba_sampling_tanpa_tahun">Cth: BA-PCB-111/KBC.180104/</string>
</resources>