<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/rounded"
    android:padding="10dp">

    <TextView
        android:id="@+id/judul_kota"
        android:text="@string/tv_kota"
        android:textColor="@android:color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/helvetica"
        android:textSize="14sp"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/kota"
        android:hint="@string/hint_kota"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="-10dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/appTheme"
        android:fontFamily="@font/poppins_light"
        android:textSize="13sp"
        android:autofillHints="name"
        android:inputType="textCapWords"
        android:scrollbars="vertical"/>

    <TextView
        android:id="@+id/judul_lokasi_ba"
        android:text="@string/lokasi_ba"
        android:layout_width="wrap_content"
        android:layout_marginTop="-5dp"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/helvetica"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="14sp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/lokasi_ba"
        android:hint="@string/hint_lokasi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="-10dp"
        android:layout_marginBottom="10dp"
        android:inputType="textCapWords"
        android:backgroundTint="@color/appTheme"
        android:fontFamily="@font/poppins_light"
        android:textSize="13sp"
        android:scrollbars="vertical"
        tools:ignore="Autofill"/>

    <TextView
        android:id="@+id/judul_kantor"
        android:text="@string/tv_kantor"
        android:layout_width="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="-5dp"
        android:fontFamily="@font/helvetica"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="14sp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/kantor"
        android:hint="@string/hint_kantor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="-10dp"
        android:layout_marginBottom="10dp"
        android:inputType="textMultiLine|textCapCharacters"
        android:backgroundTint="@color/appTheme"
        android:fontFamily="@font/poppins_light"
        android:textSize="13sp"
        android:scrollbars="vertical"
        tools:ignore="Autofill"/>

    <TextView
        android:id="@+id/judul_kanwil"
        android:text="@string/tv_kanwil"
        android:layout_width="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="-5dp"
        android:fontFamily="@font/helvetica"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="14sp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/kanwil"
        android:hint="@string/hint_kanwil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="-10dp"
        android:layout_marginBottom="10dp"
        android:inputType="textMultiLine|textCapCharacters"
        android:backgroundTint="@color/appTheme"
        android:fontFamily="@font/poppins_light"
        android:textSize="13sp"
        android:scrollbars="vertical"
        tools:ignore="Autofill"/>

    <TextView
        android:id="@+id/judul_ba_sounding"
        android:text="@string/tv_format_ba"
        android:layout_width="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="-5dp"
        android:fontFamily="@font/helvetica"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="14sp"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/format_ba_sounding"
        android:hint="@string/hint_format_ba"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="-10dp"
        android:inputType="text"
        android:backgroundTint="@color/appTheme"
        android:fontFamily="@font/poppins_light"
        android:textSize="13sp"
        android:scrollbars="vertical"
        tools:ignore="Autofill"/>

    <TextView
        android:id="@+id/judul_ba_sampling"
        android:text="@string/tv_format_ba_sampling"
        android:layout_width="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="-5dp"
        android:fontFamily="@font/helvetica"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="14sp"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/format_ba_sampling"
        android:hint="@string/hint_format_ba_sampling"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="-10dp"
        android:inputType="text"
        android:backgroundTint="@color/appTheme"
        android:fontFamily="@font/poppins_light"
        android:textSize="13sp"
        android:scrollbars="vertical"
        tools:ignore="Autofill"/>

    <LinearLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/switch_off"
        android:clipToPadding="false"
        android:elevation="15dp"
        android:orientation="horizontal"
        android:weightSum="2"
        android:visibility="gone">

        <TextView
            android:id="@+id/fraksi_tab"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/switch_on"
            android:fontFamily="@font/nunito"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/fraksi"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/interpolasi_tab"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/nunito"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/interpolasi"
            android:textAlignment="center"
            android:textColor="@color/appTheme"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/judul_tabel_kalibrasi"
        android:text="@string/tabel_kalibrasi"
        android:layout_width="wrap_content"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/helvetica"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:visibility="gone"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/tabel_kalibrasi"
        android:hint="@string/tabel_kalibrasi1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="-10dp"
        android:layout_marginBottom="10dp"
        android:inputType="numberDecimal"
        android:backgroundTint="@color/appTheme"
        android:fontFamily="@font/poppins_light"
        android:textSize="13sp"
        android:scrollbars="vertical"
        tools:ignore="Autofill"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/judul_tabel_fraksi"
        android:text="@string/tabel_fraksi"
        android:layout_width="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="-5dp"
        android:fontFamily="@font/helvetica"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:visibility="gone"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/tabel_fraksi"
        android:hint="@string/tabel_fraksi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="-10dp"
        android:layout_marginBottom="10dp"
        android:inputType="numberDecimal"
        android:backgroundTint="@color/appTheme"
        android:fontFamily="@font/poppins_light"
        android:textSize="13sp"
        android:scrollbars="vertical"
        tools:ignore="Autofill"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/judul_tabel_kalibrasi2"
        android:text="@string/tabel_kalibrasi2"
        android:layout_width="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="-5dp"
        android:fontFamily="@font/helvetica"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:visibility="gone"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/tabel_kalibrasi2"
        android:hint="@string/tabel_kalibrasi2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="-10dp"
        android:layout_marginBottom="10dp"
        android:inputType="numberDecimal"
        android:backgroundTint="@color/appTheme"
        android:fontFamily="@font/poppins_light"
        android:textSize="13sp"
        android:scrollbars="vertical"
        tools:ignore="Autofill"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/judul_density_cairan"
        android:text="@string/density_cairan"
        android:layout_width="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="-5dp"
        android:fontFamily="@font/helvetica"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:visibility="gone"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/density_cairan"
        android:hint="@string/density_cairan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="-10dp"
        android:inputType="numberDecimal"
        android:backgroundTint="@color/appTheme"
        android:fontFamily="@font/poppins_light"
        android:textSize="13sp"
        android:scrollbars="vertical"
        tools:ignore="Autofill"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/judul_no_tangki"
        android:text="@string/no_tangki"
        android:layout_width="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/helvetica"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:visibility="gone"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/no_tangki"
        android:hint="@string/no_tangki"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="-10dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/appTheme"
        android:fontFamily="@font/poppins_light"
        android:textSize="13sp"
        android:scrollbars="vertical"
        android:maxLines="1"
        android:inputType="textCapCharacters"
        tools:ignore="Autofill"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/judul_nama_pegawai"
        android:layout_width="wrap_content"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/helvetica"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:text="@string/nama_pegawai"
        android:textSize="14sp"
        android:visibility="gone"/>

    <Spinner
        android:id="@+id/nama_pegawai"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="-4dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="-10dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/appTheme"
        android:fontFamily="@font/poppins_light"
        android:textSize="13sp"
        android:scrollbars="vertical"
        tools:ignore="Autofill"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/judul_nama_pengguna_jasa"
        android:layout_width="wrap_content"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/helvetica"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:text="@string/pengguna_jasa"
        android:textSize="14sp"
        android:visibility="gone"/>

    <Spinner
        android:id="@+id/nama_pengguna_jasa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="-4dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="-10dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/appTheme"
        android:fontFamily="@font/poppins_light"
        android:textSize="13sp"
        android:scrollbars="vertical"
        tools:ignore="Autofill"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/judul_lokasi_sounding"
        android:text="@string/lokasi_sounding"
        android:layout_width="wrap_content"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/helvetica"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:visibility="gone"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/lokasi_sounding"
        android:hint="@string/lokasi_sounding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="-10dp"
        android:backgroundTint="@color/appTheme"
        android:fontFamily="@font/poppins_light"
        android:textSize="13sp"
        android:scrollbars="vertical"
        tools:ignore="Autofill"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/judul_waktu"
        android:text="@string/waktu"
        android:layout_width="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/helvetica"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:visibility="gone"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/waktu"
        android:hint="@string/waktu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="-10dp"
        android:layout_marginBottom="10dp"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:backgroundTint="@color/appTheme"
        android:fontFamily="@font/poppins_light"
        android:textSize="13sp"
        android:scrollbars="vertical"
        tools:ignore="Autofill"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:fontFamily="@font/nunito"
            android:gravity="start"
            android:padding="10dp"
            android:textColor="@color/appTheme"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvUpdate"
            android:text="@string/update"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:padding="10dp"
            android:layout_height="match_parent"
            android:gravity="end"
            android:fontFamily="@font/nunito"
            android:textSize="15sp"
            android:textColor="@color/appTheme"
            android:textStyle="bold"
            android:visibility="visible"/>

        <TextView
            android:id="@+id/tvCancel"
            android:text="@android:string/cancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:textSize="15sp"
            android:padding="10dp"
            android:gravity="center"
            android:fontFamily="@font/nunito"
            android:textColor="@android:color/black"
            android:textStyle="bold"/>

    </LinearLayout>

</LinearLayout>