<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/rounded"
    android:padding="10dp">

    <TextView
        android:id="@+id/tvTitle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/judul_hapus"
        android:textColor="@android:color/black"
        android:fontFamily="@font/nunito"
        android:textSize="17sp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/deskripsi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/hint_hapus_sounding"
        android:fontFamily="@font/helvetica"
        android:layout_marginTop="20dp"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="match_parent"
            android:gravity="center"
            android:fontFamily="@font/nunito"
            android:textSize="15sp"
            android:textColor="@color/appTheme"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvDelete"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="end"
            android:fontFamily="@font/nunito"
            android:textSize="15sp"
            android:text="@string/delete"
            android:textColor="@color/red"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvCancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:textSize="15sp"
            android:gravity="end"
            android:fontFamily="@font/nunito"
            android:text="@android:string/cancel"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>